[gd_scene load_steps=8 format=2]

[ext_resource path="res://Game_Utils/Scenes/Menu_Pause.gd" type="Script" id=1]
[ext_resource path="res://Game_Utils/Assets/Imports/Backgrounds/purple.png" type="Texture" id=2]
[ext_resource path="res://Game_Utils/Assets/Imports/Backgrounds/darkPurple.png" type="Texture" id=3]
[ext_resource path="res://Game_Utils/Assets/Imports/Backgrounds/blue.png" type="Texture" id=4]
[ext_resource path="res://Game_Utils/Scenes/Menu_Scenes/Fonts/montserrat_48.tres" type="DynamicFont" id=5]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://Game_Utils/Assets/Imports/Menu/title_screen/fonts/Montserrat-ExtraBold.ttf"

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = SubResource( 1 )

[node name="menu_pause" type="Control"]
margin_right = 1920.0
margin_bottom = 1080.0
size_flags_horizontal = 0
size_flags_vertical = 0
script = ExtResource( 1 )

[node name="BackGround" type="TextureRect" parent="."]
editor/display_folded = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.51746
margin_top = 2.51755
margin_right = 2.51746
margin_bottom = 2.51758
texture = ExtResource( 2 )
expand = true

[node name="Left" type="TextureRect" parent="BackGround"]
editor/display_folded = true
margin_right = 960.0
margin_bottom = 1080.0
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="Up" type="TextureRect" parent="BackGround/Left"]
margin_right = 960.0
margin_bottom = 540.0
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource( 3 )
expand = true

[node name="Down" type="TextureRect" parent="BackGround/Left"]
margin_top = 540.0
margin_right = 960.0
margin_bottom = 1080.0
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource( 4 )
expand = true

[node name="Label status" type="Label" parent="BackGround/Left"]
margin_left = 355.0
margin_right = 605.0
margin_bottom = 100.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_fonts/font = ExtResource( 5 )
text = "Status"
align = 1
valign = 1

[node name="Panel3" type="Panel" parent="BackGround/Left"]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -125.0
margin_right = 125.0
margin_bottom = 100.0
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="Right" type="TextureRect" parent="BackGround"]
margin_left = 960.0
margin_right = 1920.0
margin_bottom = 1080.0
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="Up - Skills" type="TextureRect" parent="BackGround/Right"]
margin_right = 960.0
margin_bottom = 865.0
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="Down - Feedback" type="TextureRect" parent="BackGround/Right"]
editor/display_folded = true
margin_top = 900.0
margin_right = 960.0
margin_bottom = 1080.0
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="Panel" type="Panel" parent="BackGround/Right/Down - Feedback"]
margin_right = 960.0
margin_bottom = 180.0
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="Label Skiils" type="Label" parent="BackGround/Right"]
margin_left = 355.0
margin_right = 605.0
margin_bottom = 100.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_fonts/font = ExtResource( 5 )
text = "Skills"
align = 1
valign = 1

[node name="Panel" type="Panel" parent="BackGround"]
editor/display_folded = true
anchor_left = 0.5
anchor_right = 0.5
margin_left = -125.0
margin_right = 125.0
margin_bottom = 100.0
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="Label player Name" type="Label" parent="BackGround/Panel"]
margin_right = 250.0
margin_bottom = 100.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_fonts/font = ExtResource( 5 )
text = "Player 1"
align = 1
valign = 1

[node name="Life" type="Control" parent="."]
editor/display_folded = true
margin_left = 91.1451
margin_top = 113.286
margin_right = 131.145
margin_bottom = 153.286

[node name="Life_Label" type="Label" parent="Life"]
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 2 )
text = "Life: 100"

[node name="Mana" type="Control" parent="."]
editor/display_folded = true
margin_left = 91.1451
margin_top = 191.431
margin_right = 131.145
margin_bottom = 231.431

[node name="Mana_Label" type="Label" parent="Mana"]
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 2 )
text = "Mana: 100"

[node name="Speed" type="Control" parent="."]
editor/display_folded = true
margin_left = 91.1451
margin_top = 191.431
margin_right = 131.145
margin_bottom = 231.431

[node name="Speed_Label" type="Label" parent="Speed"]
margin_top = 81.3964
margin_right = 209.0
margin_bottom = 131.396
custom_fonts/font = SubResource( 2 )
text = "Mana: 100"

[node name="SKILL_1" type="Control" parent="."]
editor/display_folded = true
margin_left = 1071.24
margin_top = 132.518
margin_right = 1221.24
margin_bottom = 282.518
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="SKILL 1 - LVL 1" type="Button" parent="SKILL_1"]
margin_right = 150.0
margin_bottom = 150.0
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="SKILL 1 - LVL 2" type="Button" parent="SKILL_1"]
margin_top = 200.0
margin_right = 150.0
margin_bottom = 350.0
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="SKILL 1 - LVL 3" type="Button" parent="SKILL_1"]
margin_top = 400.0
margin_right = 150.0
margin_bottom = 550.0
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="SKILL 1 - LVL 4" type="Button" parent="SKILL_1"]
margin_top = 600.0
margin_right = 150.0
margin_bottom = 750.0
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="SKILL_2" type="Control" parent="."]
editor/display_folded = true
margin_left = 1271.24
margin_top = 132.518
margin_right = 1421.24
margin_bottom = 282.518
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="SKILL 2 - LVL 1" type="Button" parent="SKILL_2"]
margin_right = 150.0
margin_bottom = 150.0
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="SKILL 2 - LVL 2" type="Button" parent="SKILL_2"]
margin_top = 200.0
margin_right = 150.0
margin_bottom = 350.0
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="SKILL 2 - LVL 3" type="Button" parent="SKILL_2"]
margin_top = 400.0
margin_right = 150.0
margin_bottom = 550.0
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="SKILL 2 - LVL 4" type="Button" parent="SKILL_2"]
margin_top = 600.0
margin_right = 150.0
margin_bottom = 750.0
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="SKILL_3" type="Control" parent="."]
editor/display_folded = true
margin_left = 1471.24
margin_top = 132.518
margin_right = 1621.24
margin_bottom = 282.518
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="SKILL 3 - LVL 1" type="Button" parent="SKILL_3"]
margin_right = 150.0
margin_bottom = 150.0
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="SKILL 3 - LVL 2" type="Button" parent="SKILL_3"]
margin_top = 200.0
margin_right = 150.0
margin_bottom = 350.0
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="SKILL 3 - LVL 3" type="Button" parent="SKILL_3"]
margin_top = 400.0
margin_right = 150.0
margin_bottom = 550.0
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="SKILL 3 - LVL 4" type="Button" parent="SKILL_3"]
margin_top = 600.0
margin_right = 150.0
margin_bottom = 750.0
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="SKILL_4" type="Control" parent="."]
editor/display_folded = true
margin_left = 1671.24
margin_top = 132.518
margin_right = 1821.24
margin_bottom = 282.518
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="SKILL 4 - LVL 1" type="Button" parent="SKILL_4"]
margin_right = 150.0
margin_bottom = 150.0
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="SKILL 4 - LVL 2" type="Button" parent="SKILL_4"]
margin_top = 200.0
margin_right = 150.0
margin_bottom = 350.0
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="SKILL 4 - LVL 3" type="Button" parent="SKILL_4"]
margin_top = 400.0
margin_right = 150.0
margin_bottom = 550.0
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="SKILL 4 - LVL 4" type="Button" parent="SKILL_4"]
margin_top = 600.0
margin_right = 150.0
margin_bottom = 750.0
size_flags_horizontal = 0
size_flags_vertical = 0
